add moment in header and begin css setting

--- a/index.html
+++ b/index.html
@@ -30,37 +30,164 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-    <div class="row">
+
+      <div class="row">
         <div class="time-block hour col-2" id="7">7am</div>
         <div class="time-slot col-8">
             <textarea
             class="calendar-item"
-            placeholder="________"
-            row="2"
-            cols="50"
+            placeholder="SAVE TASK HERE"
+            row="3"
+            col="max"
             ></textarea>
         </div>
         <div class="saveBtn col-2">
             <button id="7am">Save</button>
         </div>
-    </div>
-    <div class="row">
+      </div>
+
+      <div class="row">
         <div class="time-block hour col-2" id="8">8am</div>
         <div class="time-slot col-8">
             <textarea
             class="calendar-item"
-            placeholder="________"
-            row="2"
-            cols="50"
+            placeholder="SAVE TASK HERE"
+            row="3"
             ></textarea>
         </div>
         <div class="saveBtn col-2">
             <button id="8am">Save</button>
         </div>
-    </div>
+      </div>
+
+      <div class="row">
+        <div class="time-block hour col-2" id="9">9am</div>
+        <div class="time-slot col-8">
+            <textarea
+            class="calendar-item"
+            placeholder="SAVE TASK HERE"
+            row="3"
+            ></textarea>
+        </div>
+        <div class="saveBtn col-2">
+            <button id="9am">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="time-block hour col-2" id="10">10am</div>
+        <div class="time-slot col-8">
+            <textarea
+            class="calendar-item"
+            placeholder="SAVE TASK HERE"
+            row="3"
+            ></textarea>
+        </div>
+        <div class="saveBtn col-2">
+            <button id="10am">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="time-block hour col-2" id="11">11am</div>
+        <div class="time-slot col-8">
+            <textarea
+            class="calendar-item"
+            placeholder="SAVE TASK HERE"
+            row="3"
+            ></textarea>
+        </div>
+        <div class="saveBtn col-2">
+            <button id="11am">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="time-block hour col-2" id="12">12pm</div>
+        <div class="time-slot col-8">
+            <textarea
+            class="calendar-item"
+            placeholder="SAVE TASK HERE"
+            row="3"
+            ></textarea>
+        </div>
+        <div class="saveBtn col-2">
+            <button id="12pm">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="time-block hour col-2" id="1">1pm</div>
+        <div class="time-slot col-8">
+            <textarea
+            class="calendar-item"
+            placeholder="SAVE TASK HERE"
+            row="3"
+            ></textarea>
+        </div>
+        <div class="saveBtn col-2">
+            <button id="1pm">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="time-block hour col-2" id="2">2pm</div>
+        <div class="time-slot col-8">
+            <textarea
+            class="calendar-item"
+            placeholder="SAVE TASK HERE"
+            row="3"
+            ></textarea>
+        </div>
+        <div class="saveBtn col-2">
+            <button id="2pm">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="time-block hour col-2" id="3">3pm</div>
+        <div class="time-slot col-8">
+            <textarea
+            class="calendar-item"
+            placeholder="SAVE TASK HERE"
+            row="3"
+            ></textarea>
+        </div>
+        <div class="saveBtn col-2">
+            <button id="3pm">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="time-block hour col-2" id="4">4pm</div>
+        <div class="time-slot col-8">
+            <textarea
+            class="calendar-item"
+            placeholder="SAVE TASK HERE"
+            row="3"
+            ></textarea>
+        </div>
+        <div class="saveBtn col-2">
+            <button id="4pm">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="time-block hour col-2" id="5">5pm</div>
+        <div class="time-slot col-8">
+            <textarea
+            class="calendar-item"
+            placeholder="SAVE TASK HERE"
+            row = "3"
+            ></textarea>
+        </div>
+        <div class="saveBtn col-2">
+            <button id="5pm">Save</button>
+        </div>
+      </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <scrip src="assets/script.js"></scrip>
+    <script src="assets/script.js"></script>
   </body>
 </html>
