--- a/index.html
+++ b/index.html
@@ -27,165 +27,133 @@
       <h1 class="display-3">Work Day Planner</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <p id="currentTime" class="lead"></p>
+      <button id="clearFieldsBtn" type="button" class="btn btn-secondary" aria-label="clear items">
+        Clear Fields
+      </button>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
-
-      <div class="row">
-        <div class="time-block hour col-2" id="7">7am</div>
-        <div class="time-slot col-8">
-            <textarea
-            class="calendar-item"
-            placeholder="SAVE TASK HERE"
-            row="3"
-            col="max"
-            ></textarea>
-        </div>
-        <div class="saveBtn col-2">
-            <button id="7am">Save</button>
-        </div>
+      
+      <div id="07" class ="row time-slot">
+        <div class="hour col-2">7am</div>
+        <textarea
+        class="col-8 calendar-item"
+        placeholder="SAVE TASK HERE"
+        row="3"
+        col="max"
+        ></textarea>
+        <button class="saveBtn col-md-2"><i class="fa fa-save" style="font-size:24px"></i></button>
       </div>
 
-      <div class="row">
-        <div class="time-block hour col-2" id="8">8am</div>
-        <div class="time-slot col-8">
-            <textarea
-            class="calendar-item"
-            placeholder="SAVE TASK HERE"
-            row="3"
-            ></textarea>
-        </div>
-        <div class="saveBtn col-2">
-            <button id="8am">Save</button>
-        </div>
+      <div id="08" class ="row time-slot">
+        <div class="hour col-2">8am</div>
+        <textarea
+        class="col-8 calendar-item"
+        placeholder="SAVE TASK HERE"
+        row="3"
+        col="max"
+        ></textarea>
+        <button class="saveBtn col-md-2"><i class="fa fa-save" style="font-size:24px"></i></button>
       </div>
 
-      <div class="row">
-        <div class="time-block hour col-2" id="9">9am</div>
-        <div class="time-slot col-8">
-            <textarea
-            class="calendar-item"
-            placeholder="SAVE TASK HERE"
-            row="3"
-            ></textarea>
-        </div>
-        <div class="saveBtn col-2">
-            <button id="9am">Save</button>
-        </div>
+      <div id="09" class ="row time-slot">
+        <div class="hour col-2">9am</div>
+        <textarea
+        class="col-8 calendar-item"
+        placeholder="SAVE TASK HERE"
+        row="3"
+        col="max"
+        ></textarea>
+        <button class="saveBtn col-md-2"><i class="fa fa-save" style="font-size:24px"></i></button>
       </div>
 
-      <div class="row">
-        <div class="time-block hour col-2" id="10">10am</div>
-        <div class="time-slot col-8">
-            <textarea
-            class="calendar-item"
-            placeholder="SAVE TASK HERE"
-            row="3"
-            ></textarea>
-        </div>
-        <div class="saveBtn col-2">
-            <button id="10am">Save</button>
-        </div>
+      <div id="10" class ="row time-slot">
+        <div class="hour col-2">10am</div>
+        <textarea
+        class="col-8 calendar-item"
+        placeholder="SAVE TASK HERE"
+        row="3"
+        col="max"
+        ></textarea>
+        <button class="saveBtn col-md-2"><i class="fa fa-save" style="font-size:24px"></i></button>
       </div>
 
-      <div class="row">
-        <div class="time-block hour col-2" id="11">11am</div>
-        <div class="time-slot col-8">
-            <textarea
-            class="calendar-item"
-            placeholder="SAVE TASK HERE"
-            row="3"
-            ></textarea>
-        </div>
-        <div class="saveBtn col-2">
-            <button id="11am">Save</button>
-        </div>
+      <div id="11" class ="row time-slot">
+        <div class="hour col-2">11am</div>
+        <textarea
+        class="col-8 calendar-item"
+        placeholder="SAVE TASK HERE"
+        row="3"
+        col="max"
+        ></textarea>
+        <button class="saveBtn col-md-2"><i class="fa fa-save" style="font-size:24px"></i></button>
+      </div>
+      
+      <div id="12" class ="row time-slot">
+        <div class="hour col-2">12pm</div>
+        <textarea
+        class="col-8 calendar-item"
+        placeholder="SAVE TASK HERE"
+        row="3"
+        col="max"
+        ></textarea>
+        <button class="saveBtn col-md-2"><i class="fa fa-save" style="font-size:24px"></i></button>
       </div>
 
-      <div class="row">
-        <div class="time-block hour col-2" id="12">12pm</div>
-        <div class="time-slot col-8">
-            <textarea
-            class="calendar-item"
-            placeholder="SAVE TASK HERE"
-            row="3"
-            ></textarea>
-        </div>
-        <div class="saveBtn col-2">
-            <button id="12pm">Save</button>
-        </div>
+      <div id="13" class ="row time-slot">
+        <div class="hour col-2">1pm</div>
+        <textarea
+        class="col-8 calendar-item"
+        placeholder="SAVE TASK HERE"
+        row="3"
+        col="max"
+        ></textarea>
+        <button class="saveBtn col-md-2"><i class="fa fa-save" style="font-size:24px"></i></button>
       </div>
 
-      <div class="row">
-        <div class="time-block hour col-2" id="1">1pm</div>
-        <div class="time-slot col-8">
-            <textarea
-            class="calendar-item"
-            placeholder="SAVE TASK HERE"
-            row="3"
-            ></textarea>
-        </div>
-        <div class="saveBtn col-2">
-            <button id="1pm">Save</button>
-        </div>
+      <div id="14" class ="row time-slot">
+        <div class="hour col-2">2pm</div>
+        <textarea
+        class="col-8 calendar-item"
+        placeholder="SAVE TASK HERE"
+        row="3"
+        col="max"
+        ></textarea>
+        <button class="saveBtn col-md-2"><i class="fa fa-save" style="font-size:24px"></i></button>
       </div>
 
-      <div class="row">
-        <div class="time-block hour col-2" id="2">2pm</div>
-        <div class="time-slot col-8">
-            <textarea
-            class="calendar-item"
-            placeholder="SAVE TASK HERE"
-            row="3"
-            ></textarea>
-        </div>
-        <div class="saveBtn col-2">
-            <button id="2pm">Save</button>
-        </div>
+      <div id="15" class ="row time-slot">
+        <div class="hour col-2">3pm</div>
+        <textarea
+        class="col-8 calendar-item"
+        placeholder="SAVE TASK HERE"
+        row="3"
+        col="max"
+        ></textarea>
+        <button class="saveBtn col-md-2"><i class="fa fa-save" style="font-size:24px"></i></button>
       </div>
 
-      <div class="row">
-        <div class="time-block hour col-2" id="3">3pm</div>
-        <div class="time-slot col-8">
-            <textarea
-            class="calendar-item"
-            placeholder="SAVE TASK HERE"
-            row="3"
-            ></textarea>
-        </div>
-        <div class="saveBtn col-2">
-            <button id="3pm">Save</button>
-        </div>
+      <div id="16" class ="row time-slot">
+        <div class="hour col-2">4pm</div>
+        <textarea
+        class="col-8 calendar-item"
+        placeholder="SAVE TASK HERE"
+        row="3"
+        col="max"
+        ></textarea>
+        <button class="saveBtn col-md-2"><i class="fa fa-save" style="font-size:24px"></i></button>
       </div>
-
-      <div class="row">
-        <div class="time-block hour col-2" id="4">4pm</div>
-        <div class="time-slot col-8">
-            <textarea
-            class="calendar-item"
-            placeholder="SAVE TASK HERE"
-            row="3"
-            ></textarea>
-        </div>
-        <div class="saveBtn col-2">
-            <button id="4pm">Save</button>
-        </div>
+  
+      <div id="17" class ="row time-slot">
+        <div class="hour col-2">5pm</div>
+        <textarea
+        class="col-8 calendar-item"
+        placeholder="SAVE TASK HERE"
+        row="3"
+        col="max"
+        ></textarea>
+        <button class="saveBtn col-md-2"><i class="fa fa-save" style="font-size:24px"></i></button>
       </div>
-
-      <div class="row">
-        <div class="time-block hour col-2" id="5">5pm</div>
-        <div class="time-slot col-8">
-            <textarea
-            class="calendar-item"
-            placeholder="SAVE TASK HERE"
-            row = "3"
-            ></textarea>
-        </div>
-        <div class="saveBtn col-2">
-            <button id="5pm">Save</button>
-        </div>
-      </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="assets/script.js"></script>
